--- a/views/about.hbs
+++ b/views/about.hbs
@@ -90,8 +90,8 @@
             <!--End Bio Section-->
 
             <!--Connect Panel-->
-            <!--<div class="col-xs-12 col-sm-12 col-md-4 col-lg-5">
-                <div class="panel panel-default">
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-5">
+                <!--<div class="panel panel-default">
                     <div class="panel panel-header">
                         Connect With Me<i class="glyphicon glyphicon-transfer"></i>
                     </div>
