--- a/views/home.hbs
+++ b/views/home.hbs
@@ -79,7 +79,8 @@
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
 
             <!--Experience-->
-            <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;"><a href="/experience">
+            <a href="/experience">
+            <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="experiencePic" src="../Images/CNBacktoSchool1.jpg">
                     <div class="card-body">
                         <p id="card-text">Experience<i class="glyphicon glyphicon-ok"></i></p>
