--- a/views/home.hbs
+++ b/views/home.hbs
@@ -112,7 +112,8 @@
         <div class="col-xs-offset-3 col-offset-sm-3 col-offset-md-3 col-offset-lg-3 col-xl-3">
 
             <!--Photography Panel-->
-            <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;"><a href="/photo">
+            <a href="/photo">
+            <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="meShooting" src="../Images/FranceMeIrelandRV.jpg">
                     <!-- <div class="panel panel-header">
                     </div> -->
