--- a/views/webPort.hbs
+++ b/views/webPort.hbs
@@ -72,7 +72,7 @@
         <!--The Adaptive Traveler-->
         <a href="https'//the-adaptive-traveler.herokuapp.com">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;>
-                <img class="card-img-top" id="clickTrip" src="../Images/taticon.png">
+                <img class="card-img-top" id="tat" src="../Images/tatUI.png">
                 <div class="card-body">
                 <p id="card-text">The Adaptive Traveler</p>
                 </div>
@@ -85,7 +85,7 @@
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4"
         <a href="https://ewill20.github.io/clicktrip/">
         <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
-            <img class="card-img-top" id="clicktripUI.png" src="../Images/clicktripUI.png">
+            <img class="card-img-top" id="clicktrip" src="../Images/clicktripUI.png">
             <div class="card-body">
                 <p id="card-text">clickTrip</p>
                 </div>
