--- a/views/webPort.hbs
+++ b/views/webPort.hbs
@@ -70,8 +70,8 @@
 
         <!--Left Column Panel-->
         <!--The Adaptive Traveler-->
-        <a href="https'//the-adaptive-traveler.herokuapp.com">
-            <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;>
+        <a href="https://the-adaptive-traveler.herokuapp.com" target="_blank">
+            <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top" id="tat" src="../Images/tatUI.png">
                 <div class="card-body">
                 <p id="card-text">The Adaptive Traveler</p>
@@ -83,7 +83,7 @@
         <!--Start Middle Column Panel-->
         <!--Click Trip-->
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4"
-        <a href="https://ewill20.github.io/clicktrip/">
+        <a href="https://ewill20.github.io/clicktrip/" target="_blank">
         <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
             <img class="card-img-top" id="clicktrip" src="../Images/clicktripUI.png">
             <div class="card-body">
@@ -91,6 +91,19 @@
                 </div>
             </div></a>
         </div>
+        <!--End Middle Column Panel-->
+
+        <!--Right Column Panel-->
+        <!--Innovative Photos-->
+        <a href="https://innovative-photos.herokuapp.com/" target="_blank">
+            <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;>
+                <img class="card-img-top" id="inPhotos" src="../Images/IPLOGO.jpg">
+                <div class="card-body">
+                <p id="card-text">Innovative Photos/创新照片</p>
+                </div>
+            </div></a>
+        </div>
+        <!--End Left Column Panel-->
 
 
 
