--- a/views/webPort.hbs
+++ b/views/webPort.hbs
@@ -72,6 +72,7 @@
         <!--The Adaptive Traveler-->
         <a href="https://the-adaptive-traveler.herokuapp.com" target="_blank">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
+                <div class="card-img-top" id="tatDesc">Your one-stop website for all the travel knowledge you need to become less of a tourist and more of an adaptive traveler...</div>
                 <img class="card-img-top" id="tat" src="../Images/tatUI.png">
                 <div class="card-body">
                 <p id="card-text">The Adaptive Traveler</p>
