--- a/public/css/style.css
+++ b/public/css/style.css
@@ -385,17 +385,17 @@ footer {
 }
 /* Title */
 .navbar-brand {
-    background-color: #ff4500;
     width: 200px;
     text-align: center;
     font-family: 'Acme', sans-serif;
     font-size: 48px !important;
 	 height: auto !important; 
-	color: #007bff;
+	color: white;
 	margin-left: 100px !important;
+	margin-right: 55px !important;
 }
 .navbar-nav {
-	color: #ff4500;
+	color: white !important;
 	margin: 0 200px 0 0;
 	padding: 20px 0 10px 0; 
 }
