--- a/views/webPort.hbs
+++ b/views/webPort.hbs
@@ -1,5 +1,5 @@
 <!--Start Nav-->
-<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl navbar-dark green-gradient">
+<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl special-color">
     <a class="navbar-brand" href="/home">Eric Willard</a>
 
     <!-- Social Media Contact Links-->
