--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,6 +12,9 @@
     <!-- Favicon link -->
     <link rel="icon" type="image/ico" href="../Images/ewillicon3.png">
     
+    <!--Google Font-->
+    <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
+
     <!-- Material Design Bootstrap -->
     <link href="/MDB/css/mdb.min.css" rel="stylesheet">
     <link rel='stylesheet' id='ajax-auth-style-css' href='https://mdbootstrap.com/wp-content/themes/mdbootstrap4/css/ajax-auth-style.css?ver=4.8.2'
